samples/_failures_safe/1760961788_ac3d93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef2bcabf.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_ef2bcabf.c:159: error: expected ‘{’ at end of input
